index page designed

--- a/portfolio.html
+++ b/portfolio.html
@@ -142,8 +142,10 @@
                 width="360"
                 height="300"
               />
-              <h2 class="title-item">Online Courses</h2>
-              <p class="item-description">Marketing</p>
+              <div class="team-text">
+                <h2 class="title-item">Online Courses</h2>
+                <p class="item-description">Marketing</p>
+              </div>
             </a>
           </li>
           <li class="list-style portfolio-card">
@@ -154,8 +156,10 @@
                 width="360"
                 height="300"
               />
-              <h2 class="title-item">Instagram Stories Concept</h2>
-              <p class="item-description">Design</p>
+              <div class="team-text">
+                <h2 class="title-item">Instagram Stories Concept</h2>
+                <p class="item-description">Design</p>
+              </div>
             </a>
           </li>
           <li class="list-style portfolio-card">
@@ -166,8 +170,10 @@
                 width="360"
                 height="300"
               />
-              <h2 class="title-item">Organic Food</h2>
-              <p class="item-description">Web Site</p>
+              <div class="team-text">
+                <h2 class="title-item">Organic Food</h2>
+                <p class="item-description">Web Site</p>
+              </div>
             </a>
           </li>
           <li class="list-style portfolio-card">
@@ -178,8 +184,10 @@
                 width="360"
                 height="300"
               />
-              <h2 class="title-item">Fresh Coffee</h2>
-              <p class="item-description">Web Site</p>
+              <div class="team-text">
+                <h2 class="title-item">Fresh Coffee</h2>
+                <p class="item-description">Web Site</p>
+              </div>
             </a>
           </li>
         </ul>
