--- a/index.html
+++ b/index.html
@@ -11,177 +11,209 @@
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700&display=swap"
       rel="stylesheet"
     />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/2.0.0/modern-normalize.min.css"
+      integrity="sha512-4xo8blKMVCiXpTaLzQSLSw3KFOVPWhm/TRtuPVc4WG6kUgjH6J03IBuG7JZPkcWMxJ5huwaBpOpnwYElP/m6wg=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
     <link rel="stylesheet" href="./css/styles.css" />
     <title>WebStudio</title>
   </head>
 
   <body>
     <header>
-      <!-- Logo and navigation menu -->
-      <nav>
-        <a href="./index.html" class="logo link"
-          >Web<span class="black-accent-color">Studio</span></a
-        >
-        <ul class="list">
-          <li><a href="./index.html" class="menu-item link">Studio</a></li>
-          <li>
-            <a href="./portfolio.html" class="menu-item link">Portfolio</a>
-          </li>
-          <li><a href="" class="menu-item link">Contacts</a></li>
-        </ul>
-      </nav>
+      <div class="container header-container">
+        <!-- Logo and navigation menu -->
 
-      <!-- Contact info -->
-      <address class="adress">
-        <ul class="list">
-          <li>
-            <a href="mailto:info@devstudio.com" class="link adress-item"
-              >info@devstudio.com</a
-            >
-          </li>
-          <li>
-            <a href="tel:+110001111111" class="link adress-item"
-              >+11 (000) 111-11-11</a
-            >
-          </li>
-        </ul>
-      </address>
+        <nav class="navigation">
+          <a href="./index.html" class="logo link"
+            >Web<span class="black-accent-color">Studio</span></a
+          >
+          <ul class="list header-nav">
+            <li><a href="./index.html" class="menu-item link">Studio</a></li>
+            <li>
+              <a href="./portfolio.html" class="menu-item link">Portfolio</a>
+            </li>
+            <li><a href="" class="menu-item link">Contacts</a></li>
+          </ul>
+        </nav>
+
+        <!-- Contact info -->
+        <address class="adress">
+          <ul class="list header-nav">
+            <li>
+              <a href="mailto:info@devstudio.com" class="link adress-item"
+                >info@devstudio.com</a
+              >
+            </li>
+            <li>
+              <a href="tel:+110001111111" class="link adress-item"
+                >+11 (000) 111-11-11</a
+              >
+            </li>
+          </ul>
+        </address>
+      </div>
     </header>
 
     <main>
       <!-- 1st section, title with button -->
       <section class="order-section">
-        <h1 class="order-service-title">
-          Effective Solutions for Your Business
-        </h1>
-        <button type="button" class="order-service-button">
-          Order Service
-        </button>
+        <div class="container">
+          <h1 class="order-service-title">
+            Effective Solutions for Your Business
+          </h1>
+          <button type="button" class="order-service-button">
+            Order Service
+          </button>
+        </div>
       </section>
 
       <!-- 2nd section, Text blocks -->
       <section>
-        <h2 class="title-section">Studio principles</h2>
-        <ul class="list">
-          <li>
-            <h3 class="title-item">Strategy</h3>
-            <p class="item-description">
-              Our goal is to identify the business problem to walk away with the
-              perfect and creative solution.
-            </p>
-          </li>
-          <li>
-            <h3 class="title-item">Punctuality</h3>
-            <p class="item-description">
-              Bring the key message to the brand's audience for the best price
-              within the shortest possible time.
-            </p>
-          </li>
-          <li>
-            <h3 class="title-item">Diligence</h3>
-            <p class="item-description">
-              Research and confirm brands that present the strongest digital
-              growth opportunities and minimize risk.
-            </p>
-          </li>
-          <li>
-            <h3 class="title-item">Technologies</h3>
-            <p class="item-description">
-              Design practice focused on digital experiences. We bring forth a
-              deep passion for problem-solving.
-            </p>
-          </li>
-        </ul>
+        <div class="container text-container">
+          <h2 class="title-section visually-hidden">Studio principles</h2>
+          <ul class="list text-items">
+            <li class="item-list">
+              <h3 class="title-item">Strategy</h3>
+              <p class="item-description">
+                Our goal is to identify the business problem to walk away with
+                the perfect and creative solution.
+              </p>
+            </li>
+            <li class="item-list">
+              <h3 class="title-item">Punctuality</h3>
+              <p class="item-description">
+                Bring the key message to the brand's audience for the best price
+                within the shortest possible time.
+              </p>
+            </li>
+            <li class="item-list">
+              <h3 class="title-item">Diligence</h3>
+              <p class="item-description">
+                Research and confirm brands that present the strongest digital
+                growth opportunities and minimize risk.
+              </p>
+            </li>
+            <li class="item-list">
+              <h3 class="title-item">Technologies</h3>
+              <p class="item-description">
+                Design practice focused on digital experiences. We bring forth a
+                deep passion for problem-solving.
+              </p>
+            </li>
+          </ul>
+        </div>
       </section>
 
       <!-- 3rd section, Text with images -->
       <section>
-        <h2 class="title-section">What are we doing</h2>
-        <ul class="list">
-          <li>
-            <img
-              src="./images/img-1.jpg"
-              alt="monitor with graphs"
-              width="360"
-              height="300"
-            />
-          </li>
-          <li>
-            <img
-              src="./images/img-2.jpg"
-              alt="phone screens"
-              width="360"
-              height="300"
-            />
-          </li>
-          <li>
-            <img
-              src="./images/img-3.jpg"
-              alt="phone in hand"
-              width="360"
-              height="300"
-            />
-          </li>
-        </ul>
+        <div class="container img-container">
+          <h2 class="title-section">What are we doing</h2>
+          <ul class="list img-list">
+            <li class="img-item">
+              <img
+                src="./images/img-1.jpg"
+                alt="monitor with graphs"
+                width="360"
+                height="300"
+              />
+            </li>
+            <li class="img-item">
+              <img
+                src="./images/img-2.jpg"
+                alt="phone screens"
+                width="360"
+                height="300"
+              />
+            </li>
+            <li class="img-item">
+              <img
+                src="./images/img-3.jpg"
+                alt="phone in hand"
+                width="360"
+                height="300"
+              />
+            </li>
+          </ul>
+        </div>
       </section>
 
       <!-- 4th section, Our Team -->
       <section class="our-team-section">
-        <h2 class="title-section">Our Team</h2>
-        <ul class="list">
-          <li class="team-item">
-            <img
-              src="./images/mark-guerrero.jpg"
-              alt="Product Designer"
-              width="264"
-              height="260"
-            />
-            <h3 class="title-item">Mark Guerrero</h3>
-            <p class="item-description">Product Designer</p>
-          </li>
-          <li class="team-item">
-            <img
-              src="./images/tom-ford.jpg"
-              alt="Frontend Developer"
-              width="264"
-              height="260"
-            />
-            <h3 class="title-item">Tom Ford</h3>
-            <p class="item-description">Frontend Developer</p>
-          </li>
-          <li class="team-item">
-            <img
-              src="./images/camilla-garcia.jpg"
-              alt="Marketing"
-              width="264"
-              height="260"
-            />
-            <h3 class="title-item">Camila Garcia</h3>
-            <p class="item-description">Marketing</p>
-          </li>
-          <li class="team-item">
-            <img
-              src="./images/daniel-wilson.jpg"
-              alt="UI Designer"
-              width="264"
-              height="260"
-            />
-            <h3 class="title-item">Daniel Wilson</h3>
-            <p class="item-description">UI Designer</p>
-          </li>
-        </ul>
+        <div class="container team-container">
+          <h2 class="title-section">Our Team</h2>
+          <ul class="list team-list">
+            <li class="team-item">
+              <img
+                class="team-img"
+                src="./images/mark-guerrero.jpg"
+                alt="Product Designer"
+                width="264"
+                height="260"
+              />
+              <div class="team-text">
+                <h3 class="title-item">Mark Guerrero</h3>
+                <p class="item-description">Product Designer</p>
+              </div>
+            </li>
+            <li class="team-item">
+              <img
+                class="team-img"
+                src="./images/tom-ford.jpg"
+                alt="Frontend Developer"
+                width="264"
+                height="260"
+              />
+              <div class="team-text">
+                <h3 class="title-item">Tom Ford</h3>
+                <p class="item-description">Frontend Developer</p>
+              </div>
+            </li>
+            <li class="team-item">
+              <img
+                class="team-img"
+                src="./images/camilla-garcia.jpg"
+                alt="Marketing"
+                width="264"
+                height="260"
+              />
+              <div class="team-text">
+                <h3 class="title-item">Camila Garcia</h3>
+                <p class="item-description">Marketing</p>
+              </div>
+            </li>
+            <li class="team-item">
+              <img
+                class="team-img"
+                src="./images/daniel-wilson.jpg"
+                alt="UI Designer"
+                width="264"
+                height="260"
+              />
+              <div class="team-text">
+                <h3 class="title-item">Daniel Wilson</h3>
+                <p class="item-description">UI Designer</p>
+              </div>
+            </li>
+          </ul>
+        </div>
       </section>
     </main>
 
     <!-- Footer section -->
     <footer class="footer">
-      <a href="./index.html" class="logo link"
-        >Web<span class="white-accent-color">Studio</span></a
-      >
-      <p class="footer-description">
-        Increase the flow of customers and sales for your business with digital
-        marketing & growth solutions.
-      </p>
+      <div class="container footer-container">
+        <a href="./index.html" class="logo link footer-logo"
+          >Web<span class="white-accent-color">Studio</span></a
+        >
+        <p class="footer-description">
+          Increase the flow of customers and sales for your business with
+          digital marketing & growth solutions.
+        </p>
+      </div>
     </footer>
   </body>
 </html>
