fix index html css

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   </head>
 
   <body>
-    <header>
+    <header class="line">
       <div class="container header-container">
         <!-- Logo and navigation menu -->
 
@@ -72,8 +72,8 @@
       </section>
 
       <!-- 2nd section, Text blocks -->
-      <section>
-        <div class="container text-container">
+      <section class="text-block-section">
+        <div class="container">
           <h2 class="title-section visually-hidden">Studio principles</h2>
           <ul class="list text-items">
             <li class="item-list">
@@ -109,8 +109,8 @@
       </section>
 
       <!-- 3rd section, Text with images -->
-      <section>
-        <div class="container img-container">
+      <section class="img-container">
+        <div class="container">
           <h2 class="title-section">What are we doing</h2>
           <ul class="list img-list">
             <li class="img-item">
@@ -143,7 +143,7 @@
 
       <!-- 4th section, Our Team -->
       <section class="our-team-section">
-        <div class="container team-container">
+        <div class="container">
           <h2 class="title-section">Our Team</h2>
           <ul class="list team-list">
             <li class="team-item">
@@ -205,7 +205,7 @@
 
     <!-- Footer section -->
     <footer class="footer">
-      <div class="container footer-container">
+      <div class="container">
         <a href="./index.html" class="logo link footer-logo"
           >Web<span class="white-accent-color">Studio</span></a
         >
