--- a/portfolio.html
+++ b/portfolio.html
@@ -23,39 +23,37 @@
   </head>
 
   <body>
-    <header>
-      <div class="line">
-        <div class="container header-container header-container-portfolio">
-          <!-- Logo and navigation menu -->
-          <nav class="navigation">
-            <a href="./index.html" class="logo link"
-              >Web<span class="black-accent-color">Studio</span></a
-            >
-            <ul class="list header-nav">
-              <li><a href="./index.html" class="menu-item link">Studio</a></li>
-              <li>
-                <a href="./portfolio.html" class="menu-item link">Portfolio</a>
-              </li>
-              <li><a href="" class="menu-item link">Contacts</a></li>
-            </ul>
-          </nav>
+    <header class="line">
+      <div class="container header-container header-container-portfolio">
+        <!-- Logo and navigation menu -->
+        <nav class="navigation">
+          <a href="./index.html" class="logo link"
+            >Web<span class="black-accent-color">Studio</span></a
+          >
+          <ul class="list header-nav">
+            <li><a href="./index.html" class="menu-item link">Studio</a></li>
+            <li>
+              <a href="./portfolio.html" class="menu-item link">Portfolio</a>
+            </li>
+            <li><a href="" class="menu-item link">Contacts</a></li>
+          </ul>
+        </nav>
 
-          <!-- Contact info -->
-          <address class="adress">
-            <ul class="list header-nav">
-              <li>
-                <a href="mailto:info@devstudio.com" class="link adress-item"
-                  >info@devstudio.com</a
-                >
-              </li>
-              <li>
-                <a href="tel:+110001111111" class="link adress-item"
-                  >+11 (000) 111-11-11</a
-                >
-              </li>
-            </ul>
-          </address>
-        </div>
+        <!-- Contact info -->
+        <address class="adress">
+          <ul class="list header-nav">
+            <li>
+              <a href="mailto:info@devstudio.com" class="link adress-item"
+                >info@devstudio.com</a
+              >
+            </li>
+            <li>
+              <a href="tel:+110001111111" class="link adress-item"
+                >+11 (000) 111-11-11</a
+              >
+            </li>
+          </ul>
+        </address>
       </div>
     </header>
 
