--- a/portfolio.html
+++ b/portfolio.html
@@ -58,11 +58,11 @@
     </header>
 
     <main>
-      <section>
+      <section class="portfolio-nav-section">
         <h1 class="visually-hidden">Portfolio</h1>
 
         <!-- Portfolio navigation -->
-        <div class="container portfolio-nav-section">
+        <div class="container">
           <ul class="list portfolio-navigation">
             <li class="nav-item">
               <button type="button" class="portfolio-nav">All</button>
