--- a/portfolio.html
+++ b/portfolio.html
@@ -80,11 +80,9 @@
               <button type="button" class="portfolio-nav">Marketing</button>
             </li>
           </ul>
-        </div>
 
-        <!-- portfolio cards -->
-        <div class="container portfolio-section">
-          <ul class="list portfolio-wrap">
+          <!-- portfolio cards -->
+          <ul class="list portfolio-wrap container portfolio-section">
             <li class="list-style portfolio-card">
               <a href="" class="link">
                 <img
