--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
       <!-- 2nd section, Text blocks -->
       <section class="text-block-section">
         <div class="container">
-          <h2 class="title-section visually-hidden">Studio principles</h2>
+          <h2 class="visually-hidden">Studio principles</h2>
           <ul class="list text-items">
             <li class="item-list">
               <h3 class="title-item">Strategy</h3>
