--- a/portfolio.html
+++ b/portfolio.html
@@ -83,7 +83,7 @@
 
           <!-- portfolio cards -->
           <ul class="list portfolio-wrap container portfolio-section">
-            <li class="list-style portfolio-card">
+            <li class="portfolio-card">
               <a href="" class="link">
                 <img
                   src="./images/app-interface.jpg"
@@ -98,7 +98,7 @@
                 </div>
               </a>
             </li>
-            <li class="list-style portfolio-card">
+            <li class="portfolio-card">
               <a href="" class="link">
                 <img
                   src="./images/cashless-payment.jpg"
@@ -112,7 +112,7 @@
                 </div>
               </a>
             </li>
-            <li class="list-style portfolio-card">
+            <li class="portfolio-card">
               <a href="" class="link">
                 <img
                   src="./images/meditation-app.jpg"
@@ -126,7 +126,7 @@
                 </div>
               </a>
             </li>
-            <li class="list-style portfolio-card">
+            <li class="portfolio-card">
               <a href="" class="link">
                 <img
                   src="./images/taxi-service.jpg"
@@ -140,7 +140,7 @@
                 </div>
               </a>
             </li>
-            <li class="list-style portfolio-card">
+            <li class="portfolio-card">
               <a href="" class="link">
                 <img
                   src="./images/screen-illustration.jpg"
@@ -154,7 +154,7 @@
                 </div>
               </a>
             </li>
-            <li class="list-style portfolio-card">
+            <li class="portfolio-card">
               <a href="" class="link">
                 <img
                   src="./images/online-courses.jpg"
@@ -168,7 +168,7 @@
                 </div>
               </a>
             </li>
-            <li class="list-style portfolio-card">
+            <li class="portfolio-card">
               <a href="" class="link">
                 <img
                   src="./images/instagram-stories.jpg"
@@ -182,7 +182,7 @@
                 </div>
               </a>
             </li>
-            <li class="list-style portfolio-card">
+            <li class="portfolio-card">
               <a href="" class="link">
                 <img
                   src="./images/organic-food.jpg"
@@ -196,7 +196,7 @@
                 </div>
               </a>
             </li>
-            <li class="list-style portfolio-card">
+            <li class="portfolio-card">
               <a href="" class="link">
                 <img
                   src="./images/fresh-coffee.jpg"
