--- a/portfolio.html
+++ b/portfolio.html
@@ -82,7 +82,7 @@
           </ul>
 
           <!-- portfolio cards -->
-          <ul class="list portfolio-wrap container portfolio-section">
+          <ul class="list portfolio-wrap portfolio-section">
             <li class="portfolio-card">
               <a href="" class="link">
                 <img
