fix errors after mentor checking

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <!-- Logo and navigation menu -->
 
         <nav class="navigation">
-          <a href="./index.html" class="logo link"
+          <a href="./index.html" class="logo link logo-top"
             >Web<span class="black-accent-color">Studio</span></a
           >
           <ul class="list header-nav">
