--- a/portfolio.html
+++ b/portfolio.html
@@ -27,7 +27,7 @@
       <div class="container header-container header-container-portfolio">
         <!-- Logo and navigation menu -->
         <nav class="navigation">
-          <a href="./index.html" class="logo link"
+          <a href="./index.html" class="logo link logo-top"
             >Web<span class="black-accent-color">Studio</span></a
           >
           <ul class="list header-nav">
